--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {%block body %}
 <div class="content">
-    <h1 style="text-align: center;">Task Master</h1>
+    <h1 style="text-align: center;">Task Master, thank you gokula </h1>
 
     <table>
         <tr>
